--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "astro-seo": "^0.8.0",
     "sharp": "^0.33.0",
     "tailwindcss": "^3.3.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
